[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fabric-utils"
version = "0.0.03"
description = "Data engineering utilities for Microsoft Fabric: table registry, watermarking, optimization scheduling, strategy assessment, and Delta Lake loading"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Data Engineering Team" }
]
keywords = ["fabric", "delta-lake", "pyspark", "watermark", "incremental", "optimization", "table-registry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
]

dependencies = []  # PySpark provided by Fabric runtime

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fabric_utils"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
